objects/Process_Control__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detection__c</fullName>
        <label>Detection</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Risk_ID__c</fullName>
        <label>Potential Risk ID</label>
        <referenceTo>Potential_Risk__c</referenceTo>
        <relationshipLabel>Process Control</relationshipLabel>
        <relationshipName>Process_Control</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Process_Control_Name__c</fullName>
        <label>Process Control Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Process Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Description__c</columns>
        <columns>Potential_Risk_ID__c</columns>
        <columns>Process_Control_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Process Control ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>